// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MeraLogo default renders are unchanged animated sweep 1`] = `
<View
  height={56}
  testID="svg-Svg"
  viewBox="255 146 514 732"
  width={56}
>
  <View
    d="M512 170 L745 304 L745 720 L512 854 L279 720 L279 304 Z"
    fill="none"
    stroke="#fff"
    strokeLinejoin="round"
    strokeWidth="24"
    testID="svg-Path"
  />
  <View
    id="hexB"
    testID="svg-ClipPath"
  >
    <View
      d="M512 170 L745 304 L745 720 L512 854 L279 720 L279 304 Z"
      testID="svg-Path"
    />
  </View>
  <View
    clipPath="url(#hexB)"
    testID="svg-G"
  >
    <View
      fill="none"
      stroke="#fff"
      strokeOpacity="0.18"
      strokeWidth="10"
      testID="svg-G"
    >
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="320"
        y="330"
      />
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="490"
        y="330"
      />
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="660"
        y="330"
      />
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="320"
        y="465"
      />
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="490"
        y="465"
      />
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="660"
        y="465"
      />
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="320"
        y="600"
      />
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="490"
        y="600"
      />
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="660"
        y="600"
      />
    </View>
    <View
      animatedProps={
        {
          "transform": [],
        }
      }
      testID="svg-G"
    >
      <View
        d="M512 760 L450 485 L574 485 Z"
        fill="#fff"
        opacity="0.300"
        testID="svg-Path"
      />
    </View>
    <View
      fill="none"
      height="110"
      rx="14"
      stroke="#fff"
      strokeWidth="16"
      testID="svg-Rect"
      width="150"
      x="490"
      y="465"
    />
    <View
      cx="512"
      cy="748"
      fill="#fff"
      r="16"
      testID="svg-Circle"
    />
  </View>
</View>
`;

exports[`MeraLogo default renders are unchanged static default 1`] = `
<View
  height={80}
  testID="svg-Svg"
  viewBox="255 146 514 732"
  width={80}
>
  <View
    d="M512 170 L745 304 L745 720 L512 854 L279 720 L279 304 Z"
    fill="none"
    stroke="#fff"
    strokeLinejoin="round"
    strokeWidth="24"
    testID="svg-Path"
  />
  <View
    id="hexB"
    testID="svg-ClipPath"
  >
    <View
      d="M512 170 L745 304 L745 720 L512 854 L279 720 L279 304 Z"
      testID="svg-Path"
    />
  </View>
  <View
    clipPath="url(#hexB)"
    testID="svg-G"
  >
    <View
      fill="none"
      stroke="#fff"
      strokeOpacity="0.18"
      strokeWidth="10"
      testID="svg-G"
    >
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="320"
        y="330"
      />
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="490"
        y="330"
      />
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="660"
        y="330"
      />
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="320"
        y="465"
      />
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="490"
        y="465"
      />
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="660"
        y="465"
      />
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="320"
        y="600"
      />
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="490"
        y="600"
      />
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="660"
        y="600"
      />
    </View>
    <View
      testID="svg-G"
      transform="rotate(-15 512 760)"
    >
      <View
        d="M512 760 L450 485 L574 485 Z"
        fill="#fff"
        opacity="0.300"
        testID="svg-Path"
      />
    </View>
    <View
      fill="none"
      height="110"
      rx="14"
      stroke="#fff"
      strokeWidth="16"
      testID="svg-Rect"
      width="150"
      x="490"
      y="465"
    />
    <View
      cx="512"
      cy="748"
      fill="#fff"
      r="16"
      testID="svg-Circle"
    />
  </View>
</View>
`;

exports[`MeraLogo default renders are unchanged static, sized and coloured 1`] = `
<View
  height={22}
  testID="svg-Svg"
  viewBox="255 146 514 732"
  width={22}
>
  <View
    d="M512 170 L745 304 L745 720 L512 854 L279 720 L279 304 Z"
    fill="none"
    stroke="#F87171"
    strokeLinejoin="round"
    strokeWidth="24"
    testID="svg-Path"
  />
  <View
    id="hexB"
    testID="svg-ClipPath"
  >
    <View
      d="M512 170 L745 304 L745 720 L512 854 L279 720 L279 304 Z"
      testID="svg-Path"
    />
  </View>
  <View
    clipPath="url(#hexB)"
    testID="svg-G"
  >
    <View
      fill="none"
      stroke="#F87171"
      strokeOpacity="0.18"
      strokeWidth="10"
      testID="svg-G"
    >
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="320"
        y="330"
      />
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="490"
        y="330"
      />
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="660"
        y="330"
      />
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="320"
        y="465"
      />
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="490"
        y="465"
      />
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="660"
        y="465"
      />
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="320"
        y="600"
      />
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="490"
        y="600"
      />
      <View
        height="110"
        rx="14"
        testID="svg-Rect"
        width="150"
        x="660"
        y="600"
      />
    </View>
    <View
      testID="svg-G"
      transform="rotate(-15 512 760)"
    >
      <View
        d="M512 760 L450 485 L574 485 Z"
        fill="#F87171"
        opacity="0.300"
        testID="svg-Path"
      />
    </View>
    <View
      fill="none"
      height="110"
      rx="14"
      stroke="#F87171"
      strokeWidth="16"
      testID="svg-Rect"
      width="150"
      x="490"
      y="465"
    />
    <View
      cx="512"
      cy="748"
      fill="#F87171"
      r="16"
      testID="svg-Circle"
    />
  </View>
</View>
`;
